--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+  background-size: 100%;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -17,21 +18,22 @@ body, a:link, a:visited, a:active{
   height:32px;
   background-color: #555;
 }
+
 .title{
   background-color: #777;
 }
 .dancer{
-  border:500px solid white;
-  border-radius:500px;
+  border:50px solid white;
+  border-radius:50px;
   position:absolute;
-  left: -500px;
-  top: -500px;
 }
 
 .greendancer{
   border-color: green;
+  border-radius:10px;
 }
 
 .bluedancer{
+  border: 1px;
   border-color: blue;
 }
